--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,6 +33,7 @@ html
         button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
 
   .container
+    != messages('message', locals)
     if errors
       each error, i in errors
         div(class="alert alert-danger") #{error.msg}
