--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,19 +18,11 @@ html
             span.sr-only (current)
         li.nav-item
           a.nav-link(href='/articles/add') Add Article
-        li.nav-item.dropdown
-          a#navbarDropdown.nav-link.dropdown-toggle(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-            | Dropdown
-          .dropdown-menu(aria-labelledby='navbarDropdown')
-            a.dropdown-item(href='#') Action
-            a.dropdown-item(href='#') Another action
-            .dropdown-divider
-            a.dropdown-item(href='#') Something else here
-        li.nav-item
-          a.nav-link.disabled(href='#') Disabled
-      form.form-inline.my-2.my-lg-0
-        input.form-control.mr-sm-2(placeholder='Search', aria-label='Search', type='search')
-        button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
+      ul.nav.navbar-nav.navbar-right
+        li
+          a.nav-link(href='/users/register') Register
+        li
+          a.nav-link(href='/users/login') Login
 
   .container
     != messages('message', locals)
